added fork banner

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <h2></h2>
   </section>
 
+  <div id="fork-me">
+    <a href="https://github.com/dmotz/ExifExodus">fork me</a>
+  </div>
+
   <section id="actions">
     <div id="photo-drop">
       <p>Drop JPG files here to remove EXIF / geotagging data.</p>
