--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="ExifExodus removes EXIF / geotag data from your photos">
+  <meta name="description" content="ExifExodus removes EXIF / GPS data from your photos">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta name="author" content="Dan Motzenbecker">
   <link href="assets/css/exifexodus.css" rel="stylesheet" type="text/css">
   <link href="assets/images/favicon.png" rel="icon" type="image/png">
   <link href="assets/images/favicon-152.png" rel="apple-touch-icon-precomposed">
-  <title>ExifExodus</title>
+  <title>ExifExodus - Remove EXIF / GPS data from your photos</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <h2>
       <em>Clean up your trail of breadcrumbs:</em>
       <br>
-      Remove geotag data from your photos before you upload them.
+      Remove GPS data from your photos before you upload them.
     </h2>
     <h2></h2>
   </section>
@@ -30,7 +30,7 @@
 
   <section id="actions">
     <div id="photo-drop">
-      <p>Drop JPG files here to remove EXIF / geotagging data.</p>
+      <p>Drop JPG files here to remove EXIF / GPS data.</p>
       <div>+</div>
     </div>
 
@@ -72,7 +72,7 @@
 
     <p>
       This has been a common vector of privacy lapses, including cases where
-      journalists have unintentionally published photos with geotagging data intact.
+      journalists have unintentionally published photos with GPS data intact.
     </p>
 
     <p>
@@ -80,7 +80,7 @@
       its <a href="http://en.wikipedia.org/wiki/XKeyscore">XKeyscore</a> program.
     </p>
 
-    <p>Here&rsquo;s an example of some EXIF geolocation data pulled from an iPhone photo:</p>
+    <p>Here&rsquo;s an example of some EXIF GPS data pulled from an iPhone photo:</p>
 
 <pre>
 GPS Latitude Ref      : North
