--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
   </section>
 
   <section>
+    <h3>What is ExifExodus?</h3>
+    <p>
+      ExifExodus is a small piece of
+      <a href="https://github.com/dmotz/ExifExodus">open-source code</a> that
+      runs right in your browser and strips GPS (and other metadata) out of your
+      photos before you upload them to other sites.
+    </p>
+    <p>
+      You don&rsquo;t have to download any software and none of your data is
+      sent to any servers.
+    <p>
+  </section>
+
+  <section>
     <h3>What is EXIF?</h3>
     <p>
       <a href="http://en.wikipedia.org/wiki/Exchangeable_image_file_format">EXIF</a>
@@ -88,17 +102,6 @@ GPS Longitude         : 74 deg 2' 40.33" W
 GPS Position          : 40 deg 41' 21.30" N, 74 deg 2' 40.33" W
 </pre>
 
-  </section>
-
-  <section>
-    <h3>What is ExifExodus?</h3>
-    <p>
-      ExifExodus is a small piece of
-      <a href="https://github.com/dmotz/ExifExodus">open-source code</a> that
-      runs directly in your browser and strips EXIF data out of your photos before
-      you upload them.
-    </p>
-    <p>None of your data is sent to any servers to do so.<p>
   </section>
 
   <section>
