--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 
     <div id="logo-text">
       <h1>ExifExodus</h1>
-      <h2>Remove GPS data from your photos <em>before</em> you share them online.</h2>
-    </div>
-
-    <div id="photo-drop">
-      <p>Drag &amp; drop JPG files here to remove GPS data.</p>
-      <div>+</div>
+      <h2>Remove GPS data from your photos before you share them online.</h2>
     </div>
 
   </div>
 
+  <section id="photo-drop">
+    <p>Drag &amp; drop JPG files here to remove GPS data.</p>
+    <div>+</div>
+  </section>
+
   <section id="output" class="hidden">
-    <h2>Save these copies (the EXIF data has been removed):</h2>
+    <h2>Save these copies (the EXIF has been removed):</h2>
   </section>
 
   <section id="actions">
@@ -45,7 +45,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="what-is-exifexodus">
     <h3>What is ExifExodus?</h3>
     <p>
       ExifExodus is a small piece of
@@ -59,7 +59,7 @@
     <p>
   </section>
 
-  <section>
+  <section id="what-is-exif">
     <h3>What is EXIF?</h3>
     <p>
       <a href="http://en.wikipedia.org/wiki/Exchangeable_image_file_format">EXIF</a>
@@ -104,7 +104,7 @@ GPS Position          : 40 deg 41' 21.30" N, 74 deg 2' 40.33" W
 
   </section>
 
-  <section>
+  <section id="how-does-it-work">
     <h3>How does it work?</h3>
     <p>
       You can run ExifExodus whenever you&rsquo;re uploading photos by using its
@@ -123,7 +123,7 @@ GPS Position          : 40 deg 41' 21.30" N, 74 deg 2' 40.33" W
     </p>
   </section>
 
-  <section>
+  <section id="is-exif-without-merit">
     <h3>Is EXIF without merit?</h3>
     <p>
       That&rsquo;s certainly not the implication of this project. Metadata adds
@@ -133,7 +133,7 @@ GPS Position          : 40 deg 41' 21.30" N, 74 deg 2' 40.33" W
     </p>
   </section>
 
-  <section>
+  <section id="already-removed">
     <h3>Doesn&rsquo;t Facebook (etc.) remove EXIF data before displaying photos?</h3>
     <p>
       Yes. Although this prevents the general public from accessing your EXIF data,
@@ -142,7 +142,7 @@ GPS Position          : 40 deg 41' 21.30" N, 74 deg 2' 40.33" W
     </p>
   </section>
 
-  <section>
+  <section id="caveats">
     <h3>Any caveats?</h3>
     <p>
       The ExifExodus bookmarklet won&rsquo;t work with any site that uses Flash
@@ -156,7 +156,7 @@ GPS Position          : 40 deg 41' 21.30" N, 74 deg 2' 40.33" W
     </p>
   </section>
 
-  <section>
+  <section id="about">
     <h3>Who made this?</h3>
     <p>
       Dan Motzenbecker
@@ -170,7 +170,7 @@ GPS Position          : 40 deg 41' 21.30" N, 74 deg 2' 40.33" W
     </p>
   </section>
 
-  <section>
+  <section id="contribute">
     <h3>Can I add to or fix something in the code?</h3>
     <p>
       <a href="https://github.com/dmotz/ExifExodus">Fork it</a>.
@@ -178,7 +178,6 @@ GPS Position          : 40 deg 41' 21.30" N, 74 deg 2' 40.33" W
   </section>
 
   <footer>
-    <span>libertas ex spectris</span>
     &infin; <a href="http://oxism.com">oxism.com</a>
   </footer>
 
